[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/dialog_maker/icons/DeleteIcon.svg" type="Texture" id=1]
[ext_resource path="res://addons/dialog_maker/scripts/tree_editor/choice_panel.gd" type="Script" id=2]


[node name="ChoicePanel" type="PanelContainer"]
margin_right = 369.0
margin_bottom = 74.0
size_flags_horizontal = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 362.0
margin_bottom = 67.0

[node name="TextEdit" type="TextEdit" parent="HBoxContainer"]
margin_right = 323.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 60 )
size_flags_horizontal = 3
size_flags_vertical = 3
breakpoint_gutter = true
smooth_scrolling = true
wrap_enabled = true
caret_blink = true
__meta__ = {
"_editor_description_": ""
}

[node name="DeleteButton" type="Button" parent="HBoxContainer"]
margin_left = 327.0
margin_right = 355.0
margin_bottom = 60.0
size_flags_vertical = 3
icon = ExtResource( 1 )
[connection signal="text_changed" from="HBoxContainer/TextEdit" to="." method="on_edit"]
